# flashcards

./: .gitignore  database.py  flashcards.db-journal  insert_data.py  main.py  pyproject.toml  queries.py  readme.md
